--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="password_txt">Password</string>
 
     <string name="questionnaire_sort">Choose a country</string>
+    <string name="spinner_title">Spinner</string>
 
     <string-array name="questionnaire_sort_by">
         <item>Sort by: Practitioner First Name A-Z</item>
