--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,8 @@
         <item>Sort by: Date Created Newest First</item>
         <item>Sort by: Date Created Oldest First</item>
     </string-array>
-    <string name="title_activity_database_main">DatabaseMainActivity</string>
+    <string name="title_activity_database_main">Database Main Activity</string>
     <string name="title_activity_questionnaire__overview">Questionnaire_Overview</string>
+    <string name="action_settings">action settings</string>
 
 </resources>
