--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,57 +97,57 @@
     <string name="_50">50</string>
 
     <!--Questionnairequestions-->
-    <string name="q1">Anxious away from caregivers(Separationanxiety)</string>
-    <string name="q2">Anxious in social situations(Socialanxiety/phobia)</string>
-    <string name="q3">Anxious generally(Generalizedanxiety)</string>
+    <string name="q1">Anxious away from caregivers (Separation anxiety)</string>
+    <string name="q2">Anxious in social situations (Social anxiety/phobia)</string>
+    <string name="q3">Anxious generally (Generalized anxiety)</string>
     <string name="q4">Anxious in social situations</string>
-    <string name="q5">Panics(Panicdisorder)</string>
-    <string name="q6">Avoids going out(Agoraphobia)</string>
-    <string name="q7">Avoids specific things(Specificphobia)</string>
-    <string name="q8">Repetitive problematic behaviours(Habitproblems)</string>
-    <string name="q9">Depression/lowmood(Depression)</string>
-    <string name="q10">Self-Harm(Selfinjuryorself-harm)</string>
+    <string name="q5">Panics (Panic disorder)</string>
+    <string name="q6">Avoids going out (Agoraphobia)</string>
+    <string name="q7">Avoids specific things (Specific phobia)</string>
+    <string name="q8">Repetitive problematic behaviours (Habit problems)</string>
+    <string name="q9">Depression/low mood (Depression)</string>
+    <string name="q10">Self-Harm (Self-injury or self-harm)</string>
 
-    <string name="q11">Extreme of mood (Biopolardisorder)</string>
+    <string name="q11">Extreme of mood (Bipolar disorder)</string>
     <string name="q12">Delusional beliefs and hallucinations (Psychosis)</string>
-    <string name="q13">Drugs and alcohol difficulties (Substanceabuse)</string>
-    <string name="q14">Difficulties sitting still or concentrating(ADHD/Hyperactivity)</string>
-    <string name="q15">Behavioural difficulties (CDorODD)</string>
+    <string name="q13">Drugs and alcohol difficulties (Substance abuse)</string>
+    <string name="q14">Difficulties sitting still or concentrating (ADHD/ Hyperactivity)</string>
+    <string name="q15">Behavioural difficulties (CD or ODD)</string>
     <string name="q16">Poses risk to others</string>
-    <string name="q17">Carer management of CYP behaviour (e.g.,management of child)</string>
+    <string name="q17">Carer management of CYP behaviour (e.g. management of child)</string>
     <string name="q18">Doesn\'t get to toilet in time (Elimination problem)</string>
     <string name="q19">Disturbed by traumatic event (PTSD)</string>
-    <string name="q20">Eating issues(Anorexia/Bulimia)</string>
+    <string name="q20">Eating issues (Anorexia/ Bulimia)</string>
 
 
     <string name="q21">Family relationship difficulties</string>
-    <string name="q22">Problems in attachment to parent/carer(Attachmentproblems)</string>
+    <string name="q22">Problems in attachment to parent/carer (Attachment problems)</string>
     <string name="q23">Peer relationship difficulties</string>
-    <string name="q24">Persistent difficulties managing relationships with others(includesemergingpersonalitydisorder)</string>
-    <string name="q25">Does not speak(Selective mutism)</string>
-    <string name="q26">Gender discomfort issues(Gender Identity disorder)</string>
+    <string name="q24">Persistent difficulties managing relationships with others (includes emerging personality disorder)</string>
+    <string name="q25">Does not speak (Selective mutism)</string>
+    <string name="q26">Gender discomfort issues (Gender Identity disorder)</string>
     <string name="q27">Unexplained physical symptoms</string>
     <string name="q28">Unexplained developmental difficulties</string>
-    <string name="q29">Self-care Issues(include medical care management,obesity)</string>
+    <string name="q29">Self-care Issues (include medical care management, obesity)</string>
     <string name="q30">Adjustment to health issues</string>
 
     <string name="q31">Looked after child</string>
     <string name="q32">Young carer status</string>
     <string name="q33">Learning disability</string>
-    <string name="q34">Serious physical health issues(including chronic fatigue</string>
-    <string name="q35">Pervasive Developmental Disorders(Autism/Asperger\'s)</string>
-    <string name="q36">Neurological issues(e.g.Tics or Tourette\'s)</string>
+    <string name="q34">Serious physical health issues (including chronic fatigue)</string>
+    <string name="q35">Pervasive Developmental Disorders (Autism/ Asperger\'s)</string>
+    <string name="q36">Neurological issues (e.g. Tics or Tourette\'s)</string>
     <string name="q37">Current protection plan</string>
 
     <string name="q38">Deemed"child in need"of social service input</string>
     <string name="q39">Refugee or asylum seeker</string>
-    <string name="q40">Experience of war,torture or trafficking</string>
+    <string name="q40">Experience of war, torture or trafficking</string>
     <string name="q41">Experience of abuse or neglect</string>
     <string name="q42">Parental health issues</string>
     <string name="q43">Contact with Youth Justice System</string>
     <string name="q44">Living in financial difficulty</string>
     <string name="q45">Home</string>
-    <string name="q46">School,Work or Training</string>
+    <string name="q46">School, Work or Training</string>
     <string name="q47">Community</string>
     <string name="q48">Service Engagement</string>
     <string name="q49">Attendance Difficulties</string>
